<resources>
    <string name="app_name">TeamProject_QuickList</string>

    <!-- Repeat options for the Spinner -->
    <string-array name="recurring_options">
        <item>None</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>

    <!-- Priority options for the Spinner -->
    <string-array name="priority_options">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>

    <!-- General Texts -->
    <string name="weekly_tasks">Weekly Tasks</string>
    <string name="monthly_tasks">Monthly Tasks</string>
    <string name="quicklist_title">Quick List</string>
    <string name="quicklist_description">This productive tool is designed to help you better manage your task conveniently!</string>
    <string name="signup">Sign-up</string>
    <string name="login">Log-in</string>
    <string name="complete">Complete</string>
    <string name="submit">Submit</string>
    <string name="task_title_hint">Task Title</string>
    <string name="deadline_hint">Deadline</string>
    <string name="task_list_header">Task List</string>
    <string name="settings">Settings</string>
    <string name="account_settings">Account Settings</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="languages">Languages</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="your_name">Your Name</string>
    <string name="set_time">Set Time</string>
    <string name="delete">Delete</string>
    <string name="add_edit_task">Add/Edit Task</string>
</resources>